--- a/.github/ISSUE_TEMPLATE/workbook.yml
+++ b/.github/ISSUE_TEMPLATE/workbook.yml
@@ -1,16 +1,20 @@
-name: 📚 Workbook
-description: 워크북 주차 업로드
-title: '[📚 Chapter 0] '
-body:
-  - type: textarea
-    id: workbook-description
-    attributes:
-      label: ✨ 스터디 내용
-      placeholder: |
-        n주차 워크북 | ```Hello TypeScript```
-    validations:
-      required: true
-  - type: textarea
-    id: docs-checklist
-    attributes:
-      label: 📍 참고 사항
+---
+name: Mission Templates
+about: UMC 주차 미션 이슈 템플릿
+title: ''
+labels: ''
+assignees: ''
+
+---
+
+# ✨ 이슈 내용
+> 이슈 개요를 입력해주세요.
+
+- [ ] 기능 1 설명
+- [ ] 기능 2 설명
+- [ ] 기능 3 설명
+
+---
+
+# 📌 참고 사항
+> 추가적인 설명이 필요한 경우 입력해주세요.
